@@ -10,7 +10,8 @@ CHANGELOG
 *	Bug fix: exists() causes persistent sessions
 *	Bug fix: set() COOKIE variable borked [[Bug #3489220]
 *	Bug fix: Duplicate statements in transactions [Bug #3467535]
-*	Bug fix: file locking in Log class
+*	Bug fix: File locking in Log class
+*	Bug fix: Method call within template [Bug #3489604]
 
 2.0.9
 *	Added ReSTful class support for __call
